[package]
name = "justlwint_backend"
version = "0.1.0"
edition = "2024"

[lints.clippy]
enum_glob_use = 'deny'
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -2 }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-service = "2.0.2"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
async_once = "0.2.6"
axum = "0.8.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
color-eyre = "0.6.3"
directories = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
image = "0.25.5"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
mime = "0.3.17"
paperclip = { version = "0.9.4", features = ["actix4", "v3"] }
radix_trie = "0.2.1"
rand = "0.9.0"
rayon = "1.10.0"
rust-argon2 = "2.1.0"
rustls = "0.23.22"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
socketioxide = { version = "0.16.1", features = ["state"] }
surrealdb = { version = "2.6.1", features = ["kv-mem"] }
swagger-ui-dist = "5.20.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.1", features = ["v4"] }

